# Openclassrooms_P5

./: .gitignore  Dockerfile  README.md  init_db.sh  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: create_db.py  database.py  import_dataset_to_db.py  main.py
app/api/: models_db.py  schemas.py
app/api/routes/: feature_importance.py  model_info.py  predict.py
app/api/services/: get_prediction_from_db.py  save_prediction_to_db.py
app/db/: base.py  create_db.py  database.py  import_dataset_to_db.py  models_db.py
app/db/actions/: get_prediction_from_db.py  (+1 more)
app/ml/: model.py
app/ml/model/: pyproject.toml
app/ml/model/datas/results/features_names/: features_names.pkl
app/ml/model/datas/results/model/: best_model.cbm
app/ml/model/datas/results/threshold_opt/: thresh_opt.pkl
app/ml/model/utils/: correlation.py  filtering_counters.py  misc.py  ml_modeling.py  plotting.py
app/utils/: hash_id.py  logger_db.py
docs/source/: conf.py  index.rst
model/notebooks/: P4.ipynb  P4_p2.ipynb  P4_p3.ipynb
model/utils/: correlation.py  filtering_counters.py  misc.py  plotting.py
tests/: conftest.py
tests/api/: test_database.py  test_main.py  test_routes.py
tests/db/: test_database.py
tests/dummies/: dummies.py
tests/fixtures/: fake_historical_datas.yml  fake_profile_happy_path.yml  fake_profile_missing_features.yml  fake_profile_outliers.yml  fake_profile_over_featured.yml
tests/func/: test_func.py  test_predict_E2E.py
tests/integration/: test_integration.py
tests/unit/: test_model.py  test_schemas.py
(+7 files in other folders)
